[project]
name = "UAPML"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "abdi", email = "042"},
]
dependencies = ["tensorflow>=2.18.0", "streamlit==1.37.0", "joblib>=1.4.2", "scikit-learn>=1.6.0", "tensorflow-intel>=2.18.0", "keras>=3.7.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "streamlit run .src/app.py"